# Projeto_ufc

./: README.md  pyproject.toml
Extract/: extract.py  funcoes.py
data/: dados.parquet
