[tool.poetry]
name = "projeto-ufc"
version = "0.1.0"
description = ""
authors = ["rafaelMachado1891 <rafadmn1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
